# rad_point_kernel

./: .gitignore  LICENSE  README.md  TODO.md  mkdocs.yml  pyproject.toml  study.py
.github/workflows/: docs.yml  examples.yml  release.yml  tests.yml
docs/: api.md  index.md
docs/assets/: buildup_comparison_cache.json  generate_buildup_comparison_plots.py
docs/guide/: buildup_mc.md  caching.md  coupled_dose.md  extrapolation.md  flux_and_dose.md  installation.md  layers.md  materials.md  materials_and_layers.md  neutron_dose.md  neutron_flux.md  neutron_transmission.md  photon_dose.md  photon_flux.md  photon_transmission.md  plotting.md  source_spectra.md  studies.md  weight_windows.md
docs/theory/: buildup_factors.md  point_kernel.md
docs/vnv/: beer_lambert_single_slab.md  harima_buildup_comparison.md  index.md  neutron_fit_quality.md  primary_photon_fit_quality.md  secondary_photon_fit_quality.md  transmission_in_void.md  uncollided_flux_in_void.md
examples/python/: 0_making_materials_and_layers.py  1_single_layer_photon_transmission.py  (+11 more)
tests/: test_api.py  test_mc.py  test_polyethylene_buildup_fit.py  test_polyethylene_igloo_2d_buildup_fit.py  test_primary_secondary_shield_2d_buildup_fit.py  test_weight_windows.py
tools/: migrate_cache.py
verification_and_validation/: beer_lambert_single_slab.py  buildup_factors_vs_harima.py  harima_buildup_comparison.py  neutron_fit_test_suite.py  primary_photon_fit_test_suite.py  secondary_photon_fit_cache.json  secondary_photon_fit_test_suite.py  transmission_in_void.py  uncollided_flux_in_void.py
(+13 files in other folders)
