[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rad_point_kernel"
version = "0.1.0"
description = "Point-kernel neutron and photon transmission/dose calculator"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "rad_point_kernel_core>=0.1.0",
    "numpy",
    "inference-tools",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
