[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rad_point_kernel"
dynamic = ["version"]
description = "Point-kernel neutron and photon transmission/dose calculator"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "rad_point_kernel_core",
    "numpy",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "markdown-exec[ansi]",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
